# xbox-cad-controller

./: 3dconnexion.min.js  3dconnexion2.js  index.html
server/: Cargo.toml
server/src/: main.rs
web-extension/: background.js  contentScript.js  manifest.json
web-extension/js/: injectedScript.js  mouseDriver.js  vendor-bundle-modified.js
